# liora

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README.zh-CN.md  architecture-design.md  icon-design.md  prompt.md  structure.txt
apps/aura-docs/: Cargo.toml
apps/aura-docs/content/pages/: about.md  adoption.md  affix.md  alert.md  anchor.md  architecture.md  area_chart.md  autocomplete.md  avatar.md  backtop.md  badge.md  bar_chart.md  breadcrumb.md  calendar.md  card.md  carousel.md  cascader.md  checkbox.md  code_editor.md  collapse.md  color_picker.md  container.md  dashboard_app.md  dashboard_patterns.md  dashboard_state.md  date_picker.md  date_time_picker.md  descriptions.md  dialog.md  drawer.md  dropdown.md  empty.md  form.md  heat_bar.md  horizontal_list.md  icon.md  image.md  input_number.md  input_tag.md  label.md  (+53 more)
apps/aura-docs/src/: main.rs  markdown.rs
apps/aura-gallery/: Cargo.toml
apps/aura-gallery/src/: category.rs  lib.rs  main.rs  markdown.rs
apps/aura-gallery/src/demos/: affix_demo.rs  alert_demo.rs  anchor_demo.rs  area_chart_demo.rs  autocomplete_demo.rs  avatar_demo.rs  backtop_demo.rs  badge_demo.rs  bar_chart_demo.rs  breadcrumb_demo.rs  button_demo.rs  calendar_demo.rs  card_demo.rs  carousel_demo.rs  cascader_demo.rs  code_block_demo.rs  code_editor_demo.rs  collapse_demo.rs  color_picker_demo.rs  common.rs  container_demo.rs  date_picker_demo.rs  date_time_picker_demo.rs  descriptions_demo.rs  dialog_demo.rs  drawer_demo.rs  dropdown_demo.rs  empty_demo.rs  form_controls_demo.rs  form_demo.rs  heat_bar_demo.rs  horizontal_list_demo.rs  icon_demo.rs  image_demo.rs  input_tag_demo.rs  label_demo.rs  label_operation_demo.rs  layout_demo.rs  line_chart_demo.rs  link_demo.rs  (+44 more)
apps/liora-docs/: Cargo.toml  build.rs
apps/liora-docs/assets/locales/: en-US.toml  zh-CN.toml
apps/liora-docs/content/pages/: about.md  accordion.md  adoption.md  affix.md  alert.md  anchor.md  architecture.md  area_chart.md  authoring.md  autocomplete.md  avatar.md  backtop.md  badge.md  bar_chart.md  breadcrumb.md  button.md  calendar.md  candlestick_chart.md  card.md  carousel.md  cascader.md  checkbox.md  clipboard.md  code_block.md  code_editor.md  collapse.md  color_picker.md  combobox.md  container.md  dashboard_app.md  dashboard_patterns.md  dashboard_state.md  date_picker.md  date_time_picker.md  descriptions.md  dialog.md  (+103 more)
apps/liora-docs/src/: main.rs  markdown.rs
apps/liora-docs/tests/: gpui_startup_window_state.rs
apps/liora-gallery/: Cargo.toml  build.rs
apps/liora-gallery/src/: category.rs  lib.rs  main.rs  tray_menu.rs
crates/aura-components/: Cargo.toml
crates/aura-components/src/: affix.rs  alert.rs  anchor.rs  area_chart.rs  autocomplete.rs  avatar.rs  backtop.rs  badge.rs  bar_chart.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  cascader.rs  chart.rs  chart_frame.rs  chart_scale.rs  chart_shape.rs  checkbox.rs  checkbox_group.rs  code_block.rs  code_editor.rs  col.rs  collapse.rs  color_picker.rs  container.rs  dashboard.rs  date_picker.rs  date_time_picker.rs  descriptions.rs  dialog.rs  divider.rs  draggable.rs  drawer.rs  dropdown.rs  empty.rs  form.rs  heat_bar.rs  (+62 more)
crates/aura-components/tests/: cascader.rs  color_picker.rs  image.rs
crates/aura-core/: Cargo.toml
crates/aura-core/src/: lib.rs  popper.rs
crates/aura-icons/: Cargo.toml
crates/aura-icons-lucide/: Cargo.toml  build.rs
crates/aura-icons-lucide/src/: lib.rs
crates/aura-icons/src/: lib.rs
crates/liora/: Cargo.toml
crates/liora-components/: Cargo.toml  build.rs
crates/liora-components/src/: accordion.rs  affix.rs  alert.rs  anchor.rs  area_chart.rs  autocomplete.rs  avatar.rs  backtop.rs  badge.rs  bar_chart.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  candlestick_chart.rs  card.rs  carousel.rs  cascader.rs  chart.rs  chart_frame.rs  chart_scale.rs  chart_shape.rs  checkbox.rs  checkbox_group.rs  clipboard.rs  code_block.rs  code_editor.rs  col.rs  collapse.rs  color_picker.rs  combobox.rs  container.rs  date_picker.rs  date_time_picker.rs  descriptions.rs  dialog.rs  divider.rs  dock_layout.rs  draggable.rs  drawer.rs  (+94 more)
crates/liora-components/tests/: autocomplete.rs  cascader.rs  color_picker.rs  group_layout.rs  image.rs  transfer.rs  upload.rs
crates/liora-core/: Cargo.toml  build.rs
crates/liora-core/src/: fonts.rs  lib.rs  locales.rs  popper.rs
crates/liora-core/tests/: gpui_startup_window_state.rs
crates/liora-icons/: Cargo.toml
crates/liora-icons-antd/: Cargo.toml
crates/liora-icons-antd/assets/: UPSTREAM.md
crates/liora-icons-antd/scripts/: sync-antd.sh  sync_antd.py
crates/liora-icons-antd/src/: lib.rs
crates/liora-icons-carbon/: Cargo.toml  build.rs
crates/liora-icons-carbon/assets/: UPSTREAM.md
crates/liora-icons-carbon/scripts/: sync-carbon.sh  sync_carbon.py
crates/liora-icons-carbon/src/: lib.rs
crates/liora-icons-ionic/: Cargo.toml
crates/liora-icons-ionic/assets/: UPSTREAM.md
crates/liora-icons-ionic/scripts/: sync-ionic.sh  sync_ionic.py
crates/liora-icons-ionic/src/: lib.rs
crates/liora-icons-lucide/: Cargo.toml  build.rs
crates/liora-icons-lucide/scripts/: sync-lucide.sh
crates/liora-icons-lucide/src/: lib.rs
crates/liora-icons-material/: Cargo.toml
crates/liora-icons-material/assets/: UPSTREAM.md
crates/liora-icons-material/scripts/: sync-material.sh  sync_material.py
crates/liora-icons-material/src/: lib.rs
crates/liora-icons-tabler/: Cargo.toml
crates/liora-icons-tabler/assets/: UPSTREAM.md
crates/liora-icons-tabler/scripts/: sync-tabler.sh  sync_tabler.py
crates/liora-icons-tabler/src/: lib.rs
crates/liora-icons/src/: lib.rs
crates/liora-tray/: Cargo.toml
crates/liora-tray/src/: lib.rs
crates/liora-updater/: Cargo.toml
crates/liora-updater/src/: lib.rs
crates/liora/src/: lib.rs
examples/dashboard-app/: Cargo.toml
examples/dashboard-app/src/: main.rs  model.rs
examples/minimal-app/: Cargo.toml
examples/minimal-app/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+834 files in other folders)
