[workspace]
resolver = "2"
default-members = ["apps/liora-gallery"]
members = [
    "crates/liora-core",
    "crates/liora-theme",
    "crates/liora-components",
    "crates/liora-tray",
    "crates/liora-packager",
    "xtask",
    "crates/liora-icons",
    "crates/liora-icons-lucide",
    "apps/liora-gallery",
    "apps/liora-docs",
]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", default-features = false }
