[workspace]
resolver = "2"
default-members = ["apps/liora-gallery"]
members = [
    "crates/liora",
    "crates/liora-core",
    "crates/liora-theme",
    "crates/liora-components",
    "crates/liora-tray",
    "crates/liora-packager",
    "crates/liora-updater",
    "xtask",
    "crates/liora-icons",
    "crates/liora-icons-lucide",
    "crates/liora-icons-antd",
    "crates/liora-icons-ionic",
    "crates/liora-icons-tabler",
    "crates/liora-icons-carbon",
    "crates/liora-icons-material",
    "apps/liora-gallery",
    "apps/liora-docs",
]
exclude = [
    "third_party/zed",
    "third_party/zed/crates/gpui",
    "third_party/zed/crates/gpui_linux",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.dependencies]
anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = ["async-io", "notification", "open_uri", "file_chooser", "settings", "trash"] }
async-channel = "2.5.0"
backtrace = "0.3"
bitflags = "2.6.0"
chrono = { version = "0.4", features = ["serde"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
collections = { git = "https://github.com/zed-industries/zed", rev = "2c346f60a76fe3f0367ef924927f50a6efdf5718", version = "0.1.0" }
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
ctor = "0.4.0"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "deref", "deref_mut", "display", "from_str", "mul", "mul_assign", "not"] }
env_logger = "0.11"
futures = "0.3.32"
futures-concurrency = "7.7.1"
gpui = { version = "0.2.2", git = "https://github.com/zed-industries/zed", rev = "2c346f60a76fe3f0367ef924927f50a6efdf5718", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "2c346f60a76fe3f0367ef924927f50a6efdf5718", default-features = false }
hdrhistogram = "7"
image = "0.25.1"
inventory = "0.3.19"
itertools = "0.14.0"
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = "0.5"
metal = "0.33"
objc = "0.2"
parking_lot = "0.12.1"
pollster = "0.4.0"
postage = { version = "0.5", features = ["futures-traits"] }
profiling = "1"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
rand = "0.9"
regex = "1.5"
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
unicode-segmentation = "1.10"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
wasm-bindgen = "0.2.113"
web-time = "1.1.0"
