[package]
name = "xtask"
version = "0.1.1"
edition = "2024"
description = "Repository automation commands for Liora development, packaging, and release readiness."
license = "LicenseRef-Liora"
repository = "https://github.com/yhyzgn/liora"
publish = false

[dependencies]
liora-packager = { path = "../crates/liora-packager" }
