[package]
name = "aura-docs"
version = "0.1.0"
edition = "2024"
default-run = "aura-docs"

[[bin]]
name = "aura-docs"
path = "src/main.rs"

[[bin]]
name = "check_snippets"
path = "src/bin/check_snippets.rs"

[package.metadata.generate-rpm]

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
aura-core = { path = "../../crates/aura-core" }
aura-theme = { path = "../../crates/aura-theme" }
aura-components = { path = "../../crates/aura-components" }
aura-tray = { path = "../../crates/aura-tray" }
aura-gallery = { path = "../aura-gallery" }
aura-icons = { path = "../../crates/aura-icons" }
aura-icons-lucide = { path = "../../crates/aura-icons-lucide" }
pulldown-cmark = "0.13.3"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
gpui_platform = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui.workspace = true
gpui_platform.workspace = true
