[package]
name = "aura-gallery"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aura-gallery"
path = "src/main.rs"

[dependencies]
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
gpui_platform = { workspace = true, features = ["wayland", "x11"] }
aura-core = { path = "../../crates/aura-core" }
aura-theme = { path = "../../crates/aura-theme" }
aura-components = { path = "../../crates/aura-components" }
aura-icons = { path = "../../crates/aura-icons" }
aura-icons-lucide = { path = "../../crates/aura-icons-lucide" }
pulldown-cmark = "0.13.3"
