[package]
name = "aura-gallery"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aura-gallery"
path = "src/main.rs"

[package.metadata.generate-rpm]

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
aura-core = { path = "../../crates/aura-core" }
aura-theme = { path = "../../crates/aura-theme" }
aura-components = { path = "../../crates/aura-components" }
aura-tray = { path = "../../crates/aura-tray" }
aura-icons = { path = "../../crates/aura-icons" }
aura-icons-lucide = { path = "../../crates/aura-icons-lucide" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
gpui_platform = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui.workspace = true
gpui_platform.workspace = true
