[package]
name = "liora-gallery"
version = "0.1.18"
edition = "2024"
description = "Native GPUI component gallery and dogfooding application for Liora."
license = "LicenseRef-Liora"
repository = "https://github.com/yhyzgn/liora"
publish = false

[[bin]]
name = "liora-gallery"
path = "src/main.rs"

[package.metadata.generate-rpm]

[features]
default = []
embedded-fonts = []

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
image.workspace = true
liora-core = { path = "../../crates/liora-core" }
liora-theme = { path = "../../crates/liora-theme" }
liora-components = { path = "../../crates/liora-components" }
liora-tray = { path = "../../crates/liora-tray" }
liora-updater = { path = "../../crates/liora-updater" }
liora-icons = { path = "../../crates/liora-icons" }
liora-icons-lucide = { path = "../../crates/liora-icons-lucide" }
liora-icons-antd = { path = "../../crates/liora-icons-antd" }
liora-icons-ionic = { path = "../../crates/liora-icons-ionic" }
liora-icons-tabler = { path = "../../crates/liora-icons-tabler" }
liora-icons-carbon = { path = "../../crates/liora-icons-carbon" }
liora-icons-material = { path = "../../crates/liora-icons-material" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
gpui_platform = { workspace = true, features = ["wayland", "x11", "font-kit"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui.workspace = true
gpui_platform.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.31"
