[package]
name = "aura-components"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true
aura-core = { path = "../aura-core" }
aura-theme = { path = "../aura-theme" }
aura-icons = { path = "../aura-icons" }
aura-icons-lucide = { path = "../aura-icons-lucide" }
image = "0.25"
ureq = "2"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
