[package]
name = "aura-components"
version = "0.1.0"
edition = "2024"
description = "Enterprise-style native GPUI component library for Aura applications."
license = "LicenseRef-Aura"
repository = "https://github.com/yhyzgn/aura"
publish = false

[dependencies]
gpui.workspace = true
aura-core = { path = "../aura-core" }
aura-theme = { path = "../aura-theme" }
aura-icons = { path = "../aura-icons" }
aura-icons-lucide = { path = "../aura-icons-lucide" }
image = "0.25"
qrcode = "0.14"
rqrr = "0.8"
lyon_tessellation = "1.0"
ureq = "2"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-fancy"] }
