[package]
name = "aura-core"
version = "0.1.0"
edition = "2024"
description = "Core Aura app configuration, theme initialization, portals, and shared native GPUI helpers."
license = "LicenseRef-Aura"
repository = "https://github.com/yhyzgn/aura"
publish = false

[dependencies]
gpui.workspace = true
aura-theme = { path = "../aura-theme" }
