[package]
name = "aura-icons-lucide"
version = "0.1.0"
edition = "2024"
description = "Bundled Lucide icon paths rendered through Aura native GPUI icon primitives."
license = "LicenseRef-Aura"
repository = "https://github.com/yhyzgn/aura"
publish = false

[dependencies]
gpui = { workspace = true }
aura-icons = { path = "../aura-icons" }
