[package]
name = "aura-icons"
version = "0.1.0"
edition = "2024"
description = "Native GPUI icon primitives and shared Aura icon rendering helpers."
license = "LicenseRef-Aura"
repository = "https://github.com/yhyzgn/aura"
publish = false

[dependencies]
gpui.workspace = true
aura-core = { path = "../aura-core" }
aura-theme = { path = "../aura-theme" }
