[package]
name = "liora-components"
version = "0.1.0"
edition = "2024"
description = "Enterprise-style native GPUI component library for Liora applications."
license = "LicenseRef-Liora"
repository = "https://github.com/yhyzgn/liora"
publish = false

[dependencies]
gpui.workspace = true
liora-core = { path = "../liora-core" }
liora-theme = { path = "../liora-theme" }
liora-icons = { path = "../liora-icons" }
liora-icons-lucide = { path = "../liora-icons-lucide" }
image = "0.25"
qrcode = "0.14"
rqrr = "0.8"
lyon_tessellation = "1.0"
ureq = "2"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-fancy"] }
