[package]
name = "liora-core"
version = "0.1.7"
edition = "2024"
description = "Core Liora app configuration, theme initialization, portals, and shared native GPUI helpers."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = true

[dependencies]
gpui.workspace = true
liora-theme = { version = "0.1.7", path = "../liora-theme" }
