[package]
name = "liora-icons-lucide"
version = "0.1.18"
edition = "2024"
description = "Bundled Lucide icon paths rendered through Liora native GPUI icon primitives."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = true

[dependencies]
gpui = { workspace = true }
liora-icons = { version = "0.1.18", path = "../liora-icons" }
