[package]
name = "liora-icons-material"
version = "0.1.20"
edition = "2024"
description = "Bundled Material Design icon paths rendered through Liora native GPUI icon primitives."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = true

[dependencies]
gpui = { workspace = true }
liora-icons = { version = "0.1.20", path = "../liora-icons" }
