[package]
name = "liora-icons"
version = "0.1.11"
edition = "2024"
description = "Native GPUI icon primitives and shared Liora icon rendering helpers."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = true

[dependencies]
gpui.workspace = true
liora-core = { version = "0.1.11", path = "../liora-core" }
liora-theme = { version = "0.1.11", path = "../liora-theme" }
