[package]
name = "liora-tray"
version = "0.1.8"
edition = "2024"
description = "Cross-platform system tray facade for Liora native GPUI applications."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = true

[dependencies]
gpui = { workspace = true }
image = "0.25"
thiserror = "2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gtk = "0.18"
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.24", default-features = false }
