[package]
name = "liora"
version = "0.1.8"
edition = "2024"
description = "One-stop Liora SDK facade for native Rust GPUI apps: core, themes, components, icons, tray, packaging, and updater helpers."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = false

[dependencies]
liora-core = { version = "0.1.8", path = "../liora-core" }
liora-theme = { version = "0.1.8", path = "../liora-theme" }
liora-icons = { version = "0.1.8", path = "../liora-icons" }
liora-icons-lucide = { version = "0.1.8", path = "../liora-icons-lucide" }
liora-components = { version = "0.1.8", path = "../liora-components" }
liora-tray = { version = "0.1.8", path = "../liora-tray" }
liora-packager = { version = "0.1.8", path = "../liora-packager", optional = true }
liora-updater = { version = "0.1.8", path = "../liora-updater", optional = true }

[features]
default = ["packager", "updater"]
packager = ["dep:liora-packager"]
updater = ["dep:liora-updater"]
