[package]
name = "liora"
version = "0.1.17"
edition = "2024"
description = "One-stop Liora SDK facade for native Rust GPUI apps: core, themes, components, icons, tray, packaging, and updater helpers."
license-file = "../../LICENSE.md"
repository = "https://github.com/yhyzgn/liora"
publish = true

[dependencies]
liora-core = { version = "0.1.17", path = "../liora-core" }
liora-theme = { version = "0.1.17", path = "../liora-theme" }
liora-icons = { version = "0.1.17", path = "../liora-icons" }
liora-icons-lucide = { version = "0.1.17", path = "../liora-icons-lucide" }
liora-icons-antd = { version = "0.1.17", path = "../liora-icons-antd" }
liora-icons-ionic = { version = "0.1.17", path = "../liora-icons-ionic" }
liora-icons-tabler = { version = "0.1.17", path = "../liora-icons-tabler" }
liora-icons-carbon = { version = "0.1.17", path = "../liora-icons-carbon" }
liora-icons-material = { version = "0.1.17", path = "../liora-icons-material" }
liora-components = { version = "0.1.17", path = "../liora-components" }
liora-tray = { version = "0.1.17", path = "../liora-tray" }
liora-packager = { version = "0.1.17", path = "../liora-packager", optional = true }
liora-updater = { version = "0.1.17", path = "../liora-updater", optional = true }

[features]
default = ["packager", "updater"]
packager = ["dep:liora-packager"]
updater = ["dep:liora-updater"]
