[package]
name = "aura-dashboard-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aura-components = { path = "../../crates/aura-components" }
aura-core = { path = "../../crates/aura-core" }
aura-theme = { path = "../../crates/aura-theme" }
gpui.workspace = true
gpui_platform.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
gpui_platform = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui.workspace = true
gpui_platform.workspace = true
