[package]
name = "aura-minimal-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aura-components = { path = "../../crates/aura-components" }
aura-core = { path = "../../crates/aura-core" }
aura-theme = { path = "../../crates/aura-theme" }
gpui.workspace = true
gpui_platform.workspace = true
